fix: konga delay launch
konga要在数据库启动后、migration执行后启动，否则报错 因此增加延迟启动。

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -70,6 +70,9 @@ services:
             NODE_ENV: "production"
             DB_ADAPTER: "postgres"
             DB_URI: "postgresql://kong:kong@kong-ee-database:5432/konga"
+        entrypoint: ""
+        command: >
+            bash -c "sleep 20 && /app/start.sh"
         volumes:
             - "./konga:/app/kongadata"
 networks:
